[ansible] Add Ubuntu unsnappifier

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -3,6 +3,8 @@
   hosts: localhost
   connection: local
   roles:
+    - unsnap-ubuntu
+    - update-package-repo
     - directory-setup
     - tmux
     - vim
