[ansible] Add chromium (from Debian w/o snap)

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -3,9 +3,10 @@
   hosts: localhost
   connection: local
   roles:
-    - unsnap-ubuntu
+    #- unsnap-ubuntu
     - update-package-repo
     - directory-setup
+    - chromium
     - tmux
     - vim
     - zsh
