--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ config/ranger/history
 
 # Files containing private info not to be committed
 zsh/hosts/stephen-hawking.zsh
+config/spotify/
 
 config
