[ansible] Add nodejs, nvm + npm

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -11,7 +11,8 @@
     - java-jdk
     - java-openjdk
     - java-build-automation
-    - locate
+    #- locate
+    - nodejs
     - spotify
     - tmux
     - vim
