--- a/roles/nodejs/tasks/apt.yaml
+++ b/roles/nodejs/tasks/apt.yaml
@@ -14,4 +14,4 @@
     state: absent
 
 - name: Source nvm files and install and install lts & latest nodejs & npm
-  shell: export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" && nvm install node && nvm install --lts
+  shell: export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" && nvm install node && nvm install --lts && npm install --global gulp-cli
