--- a/workstation.yaml
+++ b/workstation.yaml
@@ -15,11 +15,15 @@
     - java-openjdk
     - java-build-automation
     #- locate
+    - network-manager-openvpn
     - nodejs
+    - screenfetch
     - shotwell
     - spotify
     - telegram
     - tmux
     - vim
+    - vlc
     - zsh
     - rvm-ruby # Has to be after zsh!
+    - archive-backup
