[ansible] Add audioripping

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -7,6 +7,7 @@
     - update-package-repo
     - directory-setup
     - additional-codecs
+    - audioripping
     - blender
     - chromium
     - digikam
