[ansible] Add portfolio-performance

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -22,6 +22,7 @@
     - network-manager-openvpn
     - nodejs
     - octave
+    - portfolio-performance
     - python
     - screenfetch
     - shotwell
