[ansible] Tweak rpi setup after testing on empty sd card

--- a/playbook-thorin.yaml
+++ b/playbook-thorin.yaml
@@ -4,5 +4,7 @@
   roles:
     - rpi-remove-pi-user
     - update-package-repo
+    - thorin-setup
     - thorin-disks
     - thorin-samba
+    - reboot
