--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-#
+#------------------------------------------------------------------------------
 # Author                Kannan Thambiah <pygospa@gmail.com>
 # Latest version        https://github.com/pygospa/dotfiles
 
@@ -8,7 +8,6 @@
 # Define colors using dracula color scheme: https://draculatheme.com
 # Color codes taken from: https://specs.draculatheme.com
 #
-
 BLUE='#bd93f9'
 CYAN='#8be9fd'
 GREEN='#50fa7b'
@@ -20,11 +19,10 @@ ORANGE='#ffb86c'
 #------------------------------------------------------------------------------
 # General settings
 #
-
-set -g display-time 4000		# inital 750 ms is too little, I think
-set -s escape-time 0			# We don't want to wate for an escape sequence
-set -g status-interval 1		# Update statusbar every second
-set -g message-style "fg=$ORANGE,bright"	# Message coloring
+set -g display-time 4000                 # Inital 750 ms is too little, I think
+set -s escape-time 0                     # Don't wait for an escape sequence
+set -g status-interval 1                 # Update statusbar every second
+set -g message-style "fg=$ORANGE,bright" # Message coloring
 
 # Make's life easier when first-time editing your ~/.tmux.con:
 bind r source-file ~/.tmux.conf \; \
@@ -35,7 +33,6 @@ bind r source-file ~/.tmux.conf \; \
 #------------------------------------------------------------------------------
 # OS-specific settings
 #
-
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-terminal xterm-256color'
 if-shell 'test "$(uname)" = "Linux"' 'set-option -g default-terminal tmux-256color'
 
@@ -47,12 +44,9 @@ if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-t
 #------------------------------------------------------------------------------
 # (Re-)Define keybindings
 #
-
-# Using < and > for resizing vertically, A and Y for horizontall (by steps of
-# five, rather than ones
-bind < resize-pane -L 5
+bind < resize-pane -L 5   # < and > for rezising horizontally in steps of 5pxl
 bind > resize-pane -R 5
-bind A resize-pane -U 5
+bind A resize-pane -U 5   # A and Y for rezising vertically in steps of 5 pixel
 bind Y resize-pane -D 5
 
 # UrlView is neat! Install UrlView, configure it to use your favorit browser,
@@ -60,10 +54,7 @@ bind Y resize-pane -D 5
 # You'll figure out, what it'll do, and you're gona love it!
 bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
-#---------------------------------------------------------#
 # Make tmux more like screen (I'm a victim of habbit :/ ) #
-#---------------------------------------------------------#
-
 unbind C-b		# set command prefix to ctrl+a instead of ctrl+b
 set -g prefix C-a
 unbind l		# switch to last window using C-a C-a
@@ -74,10 +65,7 @@ bind S split-window
 unbind %		# Use V for vertical split
 bind V split-window -h
 
-#------------------------------------------------------------#
 # Make tmux more like vim (I'm also a victim of comfort ;) ) #
-#------------------------------------------------------------#
-
 setw -g mode-keys vi	# vim-style key bindings for copy+choice mode navigation
 unbind [		# vim-like switching to copy mode with C-b v
 bind v copy-mode
@@ -96,7 +84,6 @@ bind l select-pane -R
 #------------------------------------------------------------------------------
 # Status line
 #
-
 set -g status-style "fg=$CYAN,bright"
 
 # On the left side we want the login information: <tmux[ID]@host>
@@ -106,7 +93,7 @@ set -g status-left "#[fg=MAGENTA]<$TNAME@$THOST> :"
 set -g status-left-length 30
 
 # On the right side we want the date and time to be displayed
-TDATE='#[fg=CYAN]%a, %d.%m.%Y %T'
+TDATE='#[fg=CYAN]%a, %d.%m.%Y %T'	# Format |Sun, 18.06.2023 21:21:21
 set -g status-right "#[fg=MAGENTA]|$TDATE#[fg=MAGENTA]|"
 set -g status-right-length 50
 
