--- a/roles/tmux/vars/main.yaml
+++ b/roles/tmux/vars/main.yaml
@@ -1,5 +1,6 @@
 ---
-tmux_conf:
-  repo: "{{ansible_env.PWD}}/tmux.conf"
-  file: "{{ansible_env.HOME}}/.tmux.conf"
-  backup: "{{ansible_env.PWD}}/backup/tmux.conf"
+tmux:
+  file_name: "tmux.conf"
+  file_path: "{{ ansible_env.HOME }}/.config/tmux/"
+  backup_path: "{{ ansible_env.PWD }}/backup/config/tmux/"
+  repo_path: "{{ ansible_env.PWD }}/config/tmux/"
