--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -8,20 +8,15 @@ window:
   decorations: none
 
 font:
-  size: 9
+  size: 9 
   normal:
-    #family: Fira Code
-    #style: Light
-    family: Source Code Pro
+    family: Hack
     style: Regular 
   bold:
-    #family: Fira Code
-    #style: Medium
-    family: Source Code Pro
-    style: Medium
+    family: Hack
+    style: Bold
   italic:
-    #family: Menlo
-    family: Source Code Pro
+    family: Hack
     style: Italic
 
 shell:
