--- a/roles/tmux/tasks/apt.yaml
+++ b/roles/tmux/tasks/apt.yaml
@@ -1,7 +1,13 @@
-- name: Install tmux via apt
+---
+- name: Install urlview and tmux via apt
   become: yes
   apt:
-    name: tmux
+    name:
+      - urlview
+      - tmux
     state: latest
     update_cache: yes
     cache_valid_time: 3600
+
+- set_fact:
+    tmux_installed: True
