--- a/roles/tmux/tasks/main.yaml
+++ b/roles/tmux/tasks/main.yaml
@@ -1,24 +1,12 @@
 ---
+- set_fact:
+    tmux_installed: False
+
 - import_tasks: apt.yaml
   when: ansible_facts['os_family']|lower == 'debian'
 
 - import_tasks: pacman.yaml
   when: ansible_facts['os_family']|lower == 'archlinux'
 
-- name: Register existing ~/.tmux.conf
-  stat:
-    path: "{{ tmux_conf.file }}"
-  register: tmux_file
-
-- name: Backup existing ~/.tmux.conf to dot/backup/tmux.conf
-  command: mv "{{ tmux_conf.file }}" "{{ tmux_conf.backup }}" creates="{{tmux_conf.backup}}" removes="{{tmux_conf.file}}"
-  when: tmux_file.stat.exists and tmux_file.stat.islnk == False
-
-- name: Link dot/tmux.conf to ~/.tmux.conf
-  file:
-    src: "{{ tmux_conf.repo }}"
-    dest: "{{ tmux_conf.file }}"
-    state: link
-    force: yes
-
-
+- import_tasks: config.yaml
+  when: tmux_installed
