--- a/roles/i3/tasks/pacman.yaml
+++ b/roles/i3/tasks/pacman.yaml
@@ -1,5 +1,5 @@
 ---
-- name: "pacman -S i3-gaps i3blocks i3lock i3status sysstat"
+- name: "pacman -S i3-gaps i3blocks i3lock i3status rofi sysstat"
   become: yes
   community.general.pacman:
     name:
@@ -8,6 +8,7 @@
       - i3blocks
       - i3lock
       - i3status
+      - rofi
       - sysstat
     state: latest
     update_cache: yes
