--- a/roles/i3/vars/main.yaml
+++ b/roles/i3/vars/main.yaml
@@ -28,3 +28,9 @@ xinitrc:
   file: "{{ ansible_env.HOME }}/.xinitrc"
   backup: "{{ ansible_env.PWD }}/backup/xinitrc"
   repo: "{{ ansible_env.PWD }}/xinitrc"
+
+rofi:
+  file_name: config.rasi
+  file_path: "{{ ansible_env.HOME }}/.config/rofi/"
+  backup_path: "{{ ansible_env.PWD }}/backup/config/rofi/"
+  repo_path: "{{ ansible_env.PWD }}/config/rofi/"
