--- a/roles/anki/tasks/main.yaml
+++ b/roles/anki/tasks/main.yaml
@@ -1,3 +1,6 @@
 ---
 - import_tasks: pacman.yaml
   when: ansible_facts['os_family']|lower == 'archlinux'
+
+- import_tasks: apt.yaml
+  when: ansible_facts['os_family']|lower == 'debian'
