--- a/roles/chromium/tasks/apt.yaml
+++ b/roles/chromium/tasks/apt.yaml
@@ -6,8 +6,8 @@
     dest: "{{ item.path }}"
     state: link
   loop:
-    - { file: "{{ansible_env.PWD}}/apt/debian.list", path: '/etc/apt/sources.list.d/debian.list' }
-    - { file: "{{ansible_env.PWD}}/apt/chromium.pref", path: '/etc/apt/preferences.d/chromium.pref' }
+    - { file: "{{ansible_env.PWD}}/etc/apt/sources.list.d/debian.list", path: '/etc/apt/sources.list.d/debian.list' }
+    - { file: "{{ansible_env.PWD}}/etc/apt/preferences.d/chromium.pref", path: '/etc/apt/preferences.d/chromium.pref' }
 
 - name: Add Debian signing keys to apt
   become: yes
@@ -25,7 +25,6 @@
   become: yes
   apt:
     pkg:
-      - chromium-sandbox
       - chromium
     state: latest
     update_cache: yes
