--- a/roles/mattermost/tasks/main.yaml
+++ b/roles/mattermost/tasks/main.yaml
@@ -2,3 +2,5 @@
 - import_tasks: pacman.yaml
   when: ansible_facts['os_family']|lower == 'archlinux'
 
+- import_tasks: apt.yaml
+  when: ansible_facts['os_family']|lower == 'debian'
