--- a/roles/portfolio-performance/tasks/apt.yaml
+++ b/roles/portfolio-performance/tasks/apt.yaml
@@ -2,12 +2,12 @@
 - name: Extract tar.gz to /opt
   become: yes
   unarchive:
-    src: "{{ ansible_env.HOME }}/files/sw/linux/portfolio-performance/PortfolioPerformance-0.49.2-linux.gtk.x86_64.tar.gz"
+    src: "{{ ansible_env.PWD }}/software/PortfolioPerformance-0.64.0-linux.gtk.x86_64.tar.gz"
     dest: "/opt/"
 
 - name: Link portfolio-performance.desktop to ~/.local/share/applications/
   file:
-    src: "{{ ansible_env.PWD }}/xdg-desktop-files/portfolio-performance.desktop"
+    src: "{{ ansible_env.PWD }}/XDGs/portfolio-performance.desktop"
     dest: "{{ ansible_env.HOME }}/.local/share/applications/portfolio-performance.desktop"
     state: link
 
