--- a/roles/btop/tasks/pacman.yaml
+++ b/roles/btop/tasks/pacman.yaml
@@ -1,7 +1,7 @@
 ---
-- name: Install mpv (better mplayer alternative)
+- name: Install btop (besser top/htop alternative)
   become: yes
   community.general.pacman:
-    name: mpv
+    name: btop
     state: latest
     update_cache: yes
