--- a/roles/mpv/tasks/apt.yaml
+++ b/roles/mpv/tasks/apt.yaml
@@ -1,7 +1,8 @@
 ---
 - name: Install mpv (better mplayer alternative)
   become: yes
-  community.general.pacman:
+  apt:
     name: mpv
     state: latest
     update_cache: yes
+    cache_valid_time: 3600
