--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/pack/plugins/start/vim-elixir"]
 	path = vim/pack/plugins/start/vim-elixir
 	url = https://github.com/elixir-editors/vim-elixir
+[submodule "vim/pack/plugins/start/zotcite"]
+	path = vim/pack/plugins/start/zotcite
+	url = https://github.com/jalvesaq/zotcite.git
