--- a/roles/btop/tasks/main.yaml
+++ b/roles/btop/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - set_fact:
-    mattermost_installed: False
+    btop_installed: False
 
 - import_tasks: pacman.yaml
   when: ansible_facts['os_family']|lower == 'archlinux'
@@ -9,4 +9,4 @@
   when: ansible_facts['os_family']|lower == 'debian'
 
 - import_tasks: config.yaml
-  when: mattermost_installed
+  when: btop_installed
