--- a/roles/duf/tasks/pacman.yaml
+++ b/roles/duf/tasks/pacman.yaml
@@ -1,7 +1,7 @@
 ---
-- name: Install mpv (better mplayer alternative)
+- name: Install duf (better df alternative)
   become: yes
   community.general.pacman:
-    name: mpv
+    name: duf
     state: latest
     update_cache: yes
