--- a/roles/qsv/tasks/main.yaml
+++ b/roles/qsv/tasks/main.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Chekc if cargo is installed
+  command: which cargo
+  changed_when: false
+  failed_when: cargo_installed.rc not in [0,1]
+  register: cargo_installed
+
 - name: Install qsv (cli csv processor) via rust cargo
   command: cargo install qsv --locked --features feature_capable
-  when: ansible_facts['os_family']|lower == 'archlinux'
+  when: cargo_installed.rc not in [ 0 ]
